--- a/EN-cats_grid.html
+++ b/EN-cats_grid.html
@@ -346,7 +346,7 @@
             <!-- Cat 7 - Bragaparque -->
             <div class="cat-card" onclick="openModal('cat7')">
                 <div class="status-available">Available</div>
-                <img src="./assets/img/Cats-grid/Bragaparque.jpg" alt="Bragaparque" class="cat-image">
+                <img src="./assets/img/Cats-grid/Bragaparque/Bragaparque.jpg" alt="Bragaparque" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Bragaparque</div>
                     <div class="cat-details">
@@ -360,7 +360,7 @@
             <!-- Cat 8 -Branquinha -->
             <div class="cat-card" onclick="openModal('cat8')">
                 <div class="status-available">Available</div>
-                <img src="./assets/img/Cats-grid/Branquinha/Branquinha.png" alt="Branquinha" class="cat-image">
+                <img src="./assets/img/Cats-grid/Branquinha/Branquinha1.jpg" alt="Branquinha" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Branquinha</div>
                     <div class="cat-details">
@@ -444,7 +444,7 @@
             <!-- Cat 14 - Douradinho -->
             <div class="cat-card" onclick="openModal('cat14')">
                 <div class="status-available">Available</div>
-                <img src="./assets/img/Cats-grid/Douradinho.jpg" alt="Douradinho" class="cat-image">
+                <img src="./assets/img/Cats-grid/Douradinho/Douradinho.jpg" alt="Douradinho" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Douradinho</div>
                     <div class="cat-details">
@@ -1685,7 +1685,8 @@
                 compatibleWithDogs: null,
                 description: 'He has beautiful green eyes, but he was so cute in this photo that we couldn\'t resist using it. Found near the place with the same name, this beautiful and friendly big cat lived on the streets for many years until his caregiver asked us for help to care for his coat. He loves good pâté and receiving cuddles.',
                 images: [
-                    './assets/img/Cats-grid/Bragaparque.jpg',
+                    './assets/img/Cats-grid/Bragaparque/Bragaparque.jpg',
+                    './assets/img/Cats-grid/Bragaparque/Bragaparque1.jpg'
                 ]
             },
             cat8: {
@@ -1701,7 +1702,6 @@
                 compatibleWithDogs: null,
                 description: 'Little sister of Kika and Daisy. She has beautiful soft fur and blue eyes. A bit fearful, but greedy. She loves receiving cuddles and playing with her little friends.',
                 images: [
-                    './assets/img/Cats-grid/Branquinha/Branquinha.png',
                     './assets/img/Cats-grid/Branquinha/Branquinha1.jpg',
                     './assets/img/Cats-grid/Branquinha/Branquinha2.jpg',
                     './assets/img/Cats-grid/Branquinha/Branquinha3.jpg',
@@ -1760,8 +1760,7 @@
                 description: 'This beauty has long and soft fur, very inviting for petting. Initially quite shy, Cléo has become a very affectionate and sweet kitten. She loves a good play session and pâté time.',
                 images: [
                     './assets/img/Cats-grid/Cléo/Cléo.jpg',
-                    './assets/img/Cats-grid/Cléo/Cléo1.jpg',
-                    './assets/img/Cats-grid/Cléo/Cléo2.jpg'
+                    './assets/img/Cats-grid/Cléo/Cléo1.jpg'
                 ]
             },
             cat12: {
@@ -1816,7 +1815,8 @@
                 compatibleWithDogs: null,
                 description: 'He was found with wounds on his little ears. He came to the shelter still very scared, but always let himself be cared for. Now recovered, he doesn\'t give us much trust, but accepts petting with some caution. He loves resting by the window with Salmiakki.',
                 images: [
-                    './assets/img/Cats-grid/Douradinho.jpg',
+                    './assets/img/Cats-grid/Douradinho/Douradinho.jpg',
+                    './assets/img/Cats-grid/Douradinho/Douradinho1.jpg'
                 ]
             },
             cat15: {
