--- a/cats_grid.html
+++ b/cats_grid.html
@@ -345,7 +345,7 @@
             <!-- Cat 7 - Bragaparque -->
             <div class="cat-card" onclick="openModal('cat7')">
                 <div class="status-available">Disponível</div>
-                <img src="./assets/img/Cats-grid/Bragaparque.jpg" alt="Bragaparque" class="cat-image">
+                <img src="./assets/img/Cats-grid/Bragaparque/Bragaparque.jpg" alt="Bragaparque" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Bragaparque</div>
                     <div class="cat-details">
@@ -359,7 +359,7 @@
             <!-- Cat 8 -Branquinha -->
             <div class="cat-card" onclick="openModal('cat8')">
                 <div class="status-available">Disponível</div>
-                <img src="./assets/img/Cats-grid/Branquinha/Branquinha.png" alt="Branquinha" class="cat-image">
+                <img src="./assets/img/Cats-grid/Branquinha/Branquinha1.jpg" alt="Branquinha" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Branquinha</div>
                     <div class="cat-details">
@@ -443,7 +443,7 @@
             <!-- Cat 14 - Douradinho -->
             <div class="cat-card" onclick="openModal('cat14')">
                 <div class="status-available">Disponível</div>
-                <img src="./assets/img/Cats-grid/Douradinho.jpg" alt="Douradinho" class="cat-image">
+                <img src="./assets/img/Cats-grid/Douradinho/Douradinho.jpg" alt="Douradinho" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Douradinho</div>
                     <div class="cat-details">
@@ -1789,7 +1789,8 @@
                 compatibleWithDogs: null,
                 description: 'Tem uns lindos olhos verdes, mas estava tão fofo nesta foto que não conseguimos resistir em usá-la. Encontrado perto do sítio homónimo, este lindo e simpático gatão, viveu durante muitos anos na rua até a sua cuidadora nos pedir ajuda para cuidar do seu pêlo. Adora um bom patê e de receber miminhos.',
                 images: [
-                    './assets/img/Cats-grid/Bragaparque.jpg',
+                    './assets/img/Cats-grid/Bragaparque/Bragaparque.jpg',
+                    './assets/img/Cats-grid/Bragaparque/Bragaparque1.jpg'
                 ]
             },
             cat8: {
@@ -1805,7 +1806,6 @@
                 compatibleWithDogs: null,
                 description: 'Irmãzinha da Kika e da Daisy. Tem um belo pelo macio e olhos azuis. Um pouco medrosa, mas gulosa. Adora receber mimo e de brincar com os amiguinhos.',
                 images: [
-                    './assets/img/Cats-grid/Branquinha/Branquinha.png',
                     './assets/img/Cats-grid/Branquinha/Branquinha1.jpg',
                     './assets/img/Cats-grid/Branquinha/Branquinha2.jpg',
                     './assets/img/Cats-grid/Branquinha/Branquinha3.jpg',
@@ -1864,8 +1864,7 @@
                 description: 'Esta beldade tem um pelo longo e macio, mesmo convidativo a festinhas. Inicialmente bastante tímida, a Cléo tem-se tornado numa gatinha muito dengosa e meiga. Adora uma boa brincadeira e a hora do patê.',
                 images: [
                     './assets/img/Cats-grid/Cléo/Cléo.jpg',
-                    './assets/img/Cats-grid/Cléo/Cléo1.jpg',
-                    './assets/img/Cats-grid/Cléo/Cléo2.jpg'
+                    './assets/img/Cats-grid/Cléo/Cléo1.jpg'
                 ]
             },
             cat12: {
@@ -1920,7 +1919,8 @@
                 compatibleWithDogs: null,
                 description: 'Foi encontrado com feridas nas orelhitas. Veio para o abrigo ainda muito assustado, mas sempre se deixou ser cuidado. Agora recuperado não nos dá muita confiança, mas vai recebendo festinhas com algum receio. Adora descansar à janela com a Salmiakki.',
                 images: [
-                    './assets/img/Cats-grid/Douradinho.jpg',
+                    './assets/img/Cats-grid/Douradinho/Douradinho.jpg',
+                    './assets/img/Cats-grid/Douradinho/Douradinho1.jpg'
                 ]
             },
             cat15: {
