--- a/EN-cats_grid.html
+++ b/EN-cats_grid.html
@@ -472,7 +472,7 @@
             <!-- Cat 16 - Flash -->
             <div class="cat-card" onclick="openModal('cat16')">
                 <div class="status-available">Available</div>
-                <img src="./assets/img/Cats-grid/Flash.jpg" alt="Flash" class="cat-image">
+                <img src="./assets/img/Cats-grid/Flash/Flash.jpg" alt="Flash" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Flash</div>
                     <div class="cat-details">
@@ -668,7 +668,7 @@
             <!-- Cat 30 - Olavo -->
             <div class="cat-card" onclick="openModal('cat30')">
                 <div class="status-available">Available</div>
-                <img src="./assets/img/Cats-grid/Olavo.jpg" alt="Olavo" class="cat-image">
+                <img src="./assets/img/Cats-grid/Olavo/Olavo.jpg" alt="Olavo" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Olavo</div>
                     <div class="cat-details">
@@ -1060,7 +1060,7 @@
             <!-- Cat 58 - Pepita -->
             <div class="cat-card" onclick="openModal('cat58')">
                 <div class="status-available">Available</div>
-                <img src="./assets/img/Cats-grid/Pepita.jpg" alt="Pepita" class="cat-image">
+                <img src="./assets/img/Cats-grid/Pepita/Pepita.jpg" alt="Pepita" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Pepita</div>
                     <div class="cat-details">
@@ -1848,7 +1848,10 @@
                 compatibleWithDogs: null,
                 description: 'A quite wary kitten, he has been getting comfortable with people gradually (especially if we have pâté to give him). He likes to play and share beds with the youngsters from time to time. Thor\'s archenemy.',
                 images: [
-                    './assets/img/Cats-grid/Flash.jpg',
+                    './assets/img/Cats-grid/Flash/Flash.jpg',
+                    './assets/img/Cats-grid/Flash/Flash1.jpg',
+                    './assets/img/Cats-grid/Flash/Flash2.jpg',
+                    './assets/img/Cats-grid/Flash/Flash3.jpg'
                 ]
             },
             cat17: {
@@ -2091,8 +2094,9 @@
                 compatibleWithDogs: true,
                 description: 'Rescued at Nova Arcada. This handsome boy likes to take naps and be quiet in his corner. Great appreciator of pâté and cuddles. Very friendly with both humans and any furry friend. Patient and wise. He is blind in his left eye.',
                 images: [
-                    './assets/img/Cats-grid/Olavo.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Olavo/Olavo.jpg',
+                    './assets/img/Cats-grid/Olavo/Olavo1.jpg',
+                    './assets/img/Cats-grid/Olavo/Olavo2.jpg'
                 ]
             },
             cat31: {
@@ -2585,8 +2589,11 @@
                 compatibleWithDogs: null,
                 description: 'Detailed information about Pepita coming soon.',
                 images: [
-                    './assets/img/Cats-grid/Pepita.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Pepita/Pepita.jpg',
+                    './assets/img/Cats-grid/Pepita/Pepita1.jpg',
+                    './assets/img/Cats-grid/Pepita/Pepita2.jpg',
+                    './assets/img/Cats-grid/Pepita/Pepita3.jpg',
+                    './assets/img/Cats-grid/Pepita/Pepita.mov'
                 ]
             },
             cat59: {
