--- a/cats_grid.html
+++ b/cats_grid.html
@@ -471,7 +471,7 @@
             <!-- Cat 16 - Flash -->
             <div class="cat-card" onclick="openModal('cat16')">
                 <div class="status-available">Disponível</div>
-                <img src="./assets/img/Cats-grid/Flash.jpg" alt="Flash" class="cat-image">
+                <img src="./assets/img/Cats-grid/Flash/Flash.jpg" alt="Flash" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Flash</div>
                     <div class="cat-details">
@@ -667,7 +667,7 @@
             <!-- Cat 30 - Olavo -->
             <div class="cat-card" onclick="openModal('cat30')">
                 <div class="status-available">Disponível</div>
-                <img src="./assets/img/Cats-grid/Olavo.jpg" alt="Olavo" class="cat-image">
+                <img src="./assets/img/Cats-grid/Olavo/Olavo.jpg" alt="Olavo" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Olavo</div>
                     <div class="cat-details">
@@ -1059,7 +1059,7 @@
             <!-- Cat 58 - Pepita -->
             <div class="cat-card" onclick="openModal('cat58')">
                 <div class="status-available">Disponível</div>
-                <img src="./assets/img/Cats-grid/Pepita.jpg" alt="Pepita" class="cat-image">
+                <img src="./assets/img/Cats-grid/Pepita/Pepita.jpg" alt="Pepita" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Pepita</div>
                     <div class="cat-details">
@@ -1952,7 +1952,10 @@
                 compatibleWithDogs: null,
                 description: 'Um gatinho bastante desconfiado, tem vindo ficar confortável com pessoas aos poucos (especialmente se tivermos patê para lhe dar). Gosta de brincar e partilhar as alcofas com os jovens de vez em quando. Arquinimigo do Thor.',
                 images: [
-                    './assets/img/Cats-grid/Flash.jpg',
+                    './assets/img/Cats-grid/Flash/Flash.jpg',
+                    './assets/img/Cats-grid/Flash/Flash1.jpg',
+                    './assets/img/Cats-grid/Flash/Flash2.jpg',
+                    './assets/img/Cats-grid/Flash/Flash3.jpg'
                 ]
             },
             cat17: {
@@ -2194,8 +2197,9 @@
                 compatibleWithDogs: true,
                 description: 'Resgatado no Nova Arcada. Este lindão gosta de dormir a sesta e de estar sossegadinho no seu canto. Grande apreciador de patê e de mimos. Muito simpático tanto com humanos como com qualquer patudo. Paciente e sábio. É cego do olho esquerdo.',
                 images: [
-                    './assets/img/Cats-grid/Olavo.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Olavo/Olavo.jpg',
+                    './assets/img/Cats-grid/Olavo/Olavo1.jpg',
+                    './assets/img/Cats-grid/Olavo/Olavo2.jpg'
                 ]
             },
             cat31: {
@@ -2688,8 +2692,11 @@
                 compatibleWithDogs: null,
                 description: 'Informações detalhadas sobre Pepita em breve.',
                 images: [
-                    './assets/img/Cats-grid/Pepita.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Pepita/Pepita.jpg',
+                    './assets/img/Cats-grid/Pepita/Pepita1.jpg',
+                    './assets/img/Cats-grid/Pepita/Pepita2.jpg',
+                    './assets/img/Cats-grid/Pepita/Pepita3.jpg',
+                    './assets/img/Cats-grid/Pepita/Pepita.mov'
                 ]
             },
             cat59: {
