--- a/EN-cats_grid.html
+++ b/EN-cats_grid.html
@@ -1074,7 +1074,7 @@
             <!-- Cat 59 - Peúgas -->
             <div class="cat-card" onclick="openModal('cat59')">
                 <div class="status-available">Available</div>
-                <img src="./assets/img/Cats-grid/Peugas/Peugas.jpg" alt="Peúgas" class="cat-image">
+                <img src="./assets/img/Cats-grid/Peúgas/Peugas.jpg" alt="Peúgas" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Peúgas</div>
                     <div class="cat-details">
@@ -2658,8 +2658,8 @@
                 compatibleWithDogs: null,
                 description: 'Detailed information about Peúgas coming soon.',
                 images: [
-                    './assets/img/Cats-grid/Peugas/Peugas.jpg',
-                    './assets/img/Cats-grid/Peugas/Peugas1.jpg'
+                    './assets/img/Cats-grid/Peúgas/Peugas.jpg',
+                    './assets/img/Cats-grid/Peúgas/Peugas1.jpg'
                 ]
             },
             /* Cat 60 - Pipa */
