--- a/cats_grid.html
+++ b/cats_grid.html
@@ -1073,7 +1073,7 @@
             <!-- Cat 59 - Peúgas -->
             <div class="cat-card" onclick="openModal('cat59')">
                 <div class="status-available">Disponível</div>
-                <img src="./assets/img/Cats-grid/Peugas/Peugas.jpg" alt="Peúgas" class="cat-image">
+                <img src="./assets/img/Cats-grid/Peúgas/Peugas.jpg" alt="Peúgas" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Peúgas</div>
                     <div class="cat-details">
@@ -2763,8 +2763,8 @@
                 compatibleWithDogs: null,
                 description: 'Informações detalhadas sobre Peúgas em breve.',
                 images: [
-                    './assets/img/Cats-grid/Peugas/Peugas.jpg',
-                    './assets/img/Cats-grid/Peugas/Peugas1.jpg'
+                    './assets/img/Cats-grid/Peúgas/Peugas.jpg',
+                    './assets/img/Cats-grid/Peúgas/Peugas1.jpg'
                 ]
             },
             /* Cat 60 - Pipa */
