--- a/EN-index.html
+++ b/EN-index.html
@@ -121,7 +121,7 @@
                         <!-- Slide 1 -->
                         <div class="carousel-slide">
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Adolfina1.png" alt="Adolfina" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Adolfina/Adolfina.jpg" alt="Adolfina" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Adolfina</h3>
                                     <p>1 year • Female • European Shorthair</p>
@@ -129,7 +129,7 @@
                                 </div>
                             </div>
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Baunilha.png" alt="Baunilha" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Baunilha/Baunilha.jpg" alt="Baunilha" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Baunilha</h3>
                                     <p>2 years • Male • European Shorthair</p>
@@ -137,7 +137,7 @@
                                 </div>
                             </div>
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Brownie.png" alt="Brownie" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Brownie/Brownie3.jpg" alt="Brownie" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Brownie</h3>
                                     <p>2 years • Male • Siamese</p>
@@ -148,7 +148,7 @@
                         <!-- Slide 2 -->
                         <div class="carousel-slide">
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Daisy.png" alt="Daisy" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Daisy/Daisy2.jpg" alt="Daisy" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Daisy</h3>
                                     <p>1 year • Female • Longhair</p>
@@ -156,7 +156,7 @@
                                 </div>
                             </div>
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Flash.jpg" alt="Flash" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Flash/Flash2.jpg" alt="Flash" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Flash</h3>
                                     <p>3 years • Male • Longhair</p>
@@ -164,7 +164,7 @@
                                 </div>
                             </div>
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Gaio.jpg" alt="Gaio" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Gaio/Gaio.jpg" alt="Gaio" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Gaio</h3>
                                     <p>2 years • Male • Chartreux</p>
@@ -175,7 +175,7 @@
                         <!-- Slide 3 -->
                         <div class="carousel-slide">
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Gafanhoto.jpg" alt="Gafanhoto" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Gafanhoto/Gafanhoto.jpg" alt="Gafanhoto" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Gafanhoto</h3>
                                     <p>1 year • Male • European Shorthair</p>
@@ -183,7 +183,7 @@
                                 </div>
                             </div>
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Tequila Sunset.jpg" alt="Tequila Sunset" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Tequila/Tequila.jpg" alt="Tequila Sunset" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Tequila Sunset</h3>
                                     <p>10 years • Female • Calico</p>
@@ -191,7 +191,7 @@
                                 </div>
                             </div>
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Isa.jpg" alt="Isa" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Isa/Isa.jpg" alt="Isa" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Isa</h3>
                                     <p>10 months • Female • European Shorthair</p>
@@ -202,7 +202,7 @@
                         <!-- Slide 4 -->
                         <div class="carousel-slide">
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Jubileu.jpg" alt="Jubileu" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Jubileu/Jubileu.jpg" alt="Jubileu" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Jubileu</h3>
                                     <p>5 years • Male • European Shorthair</p>
@@ -210,7 +210,7 @@
                                 </div>
                             </div>
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Judy.jpg" alt="Judy" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Judy/Judy.jpg" alt="Judy" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Judy</h3>
                                     <p>10 years • Female • European Shorthair</p>
@@ -218,7 +218,7 @@
                                 </div>
                             </div>
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Kika.jpg" alt="Kika" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Kika/Kika.jpg" alt="Kika" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Kika</h3>
                                     <p>1 year • Female • Longhair</p>
@@ -1018,27 +1018,27 @@
             var allCatCards = [
                 // Slide 1
                 [
-                    { name: 'Adolfina', age: '1 year', gender: 'Female', breed: 'European Shorthair', image: './assets/img/Cats-grid/Adolfina1.png' },
-                    { name: 'Baunilha', age: '2 years', gender: 'Male', breed: 'European Shorthair', image: './assets/img/Cats-grid/Baunilha.png' },
-                    { name: 'Brownie', age: '2 years', gender: 'Male', breed: 'Siamese', image: './assets/img/Cats-grid/Brownie.png' }
+                    { name: 'Adolfina', age: '1 year', gender: 'Female', breed: 'European Shorthair', image: './assets/img/Cats-grid/Adolfina/Adolfina.jpg' },
+                    { name: 'Baunilha', age: '2 years', gender: 'Male', breed: 'European Shorthair', image: './assets/img/Cats-grid/Baunilha/Baunilha.jpg' },
+                    { name: 'Brownie', age: '2 years', gender: 'Male', breed: 'Siamese', image: './assets/img/Cats-grid/Brownie/Brownie3.jpg' }
                 ],
                 // Slide 2
                 [
-                    { name: 'Daisy', age: '1 year', gender: 'Female', breed: 'Longhair', image: './assets/img/Cats-grid/Daisy.png' },
-                    { name: 'Flash', age: '3 years', gender: 'Male', breed: 'Longhair', image: './assets/img/Cats-grid/Flash.jpg' },
-                    { name: 'Gaio', age: '2 years', gender: 'Male', breed: 'Chartreux', image: './assets/img/Cats-grid/Gaio.jpg' }
+                    { name: 'Daisy', age: '1 year', gender: 'Female', breed: 'Longhair', image: './assets/img/Cats-grid/Daisy/Daisy2.jpg' },
+                    { name: 'Flash', age: '3 years', gender: 'Male', breed: 'Longhair', image: './assets/img/Cats-grid/Flash/Flash2.jpg' },
+                    { name: 'Gaio', age: '2 years', gender: 'Male', breed: 'Chartreux', image: './assets/img/Cats-grid/Gaio/Gaio.jpg' }
                 ],
                 // Slide 3
                 [
-                    { name: 'Gafanhoto', age: '1 year', gender: 'Male', breed: 'European Shorthair', image: './assets/img/Cats-grid/Gafanhoto.jpg' },
-                    { name: 'Tequila Sunset', age: '10 years', gender: 'Female', breed: 'Calico', image: './assets/img/Cats-grid/Tequila Sunset.jpg' },
-                    { name: 'Isa', age: '10 months', gender: 'Female', breed: 'European Shorthair', image: './assets/img/Cats-grid/Isa.jpg' }
+                    { name: 'Gafanhoto', age: '1 year', gender: 'Male', breed: 'European Shorthair', image: './assets/img/Cats-grid/Gafanhoto/Gafanhoto.jpg' },
+                    { name: 'Tequila Sunset', age: '10 years', gender: 'Female', breed: 'Calico', image: './assets/img/Cats-grid/Tequila/Tequila.jpg' },
+                    { name: 'Isa', age: '10 months', gender: 'Female', breed: 'European Shorthair', image: './assets/img/Cats-grid/Isa/Isa.jpg' }
                 ],
                 // Slide 4
                 [
-                    { name: 'Jubileu', age: '5 years', gender: 'Male', breed: 'European Shorthair', image: './assets/img/Cats-grid/Jubileu.jpg' },
-                    { name: 'Judy', age: '10 years', gender: 'Female', breed: 'European Shorthair', image: './assets/img/Cats-grid/Judy.jpg' },
-                    { name: 'Kika', age: '1 year', gender: 'Female', breed: 'Longhair', image: './assets/img/Cats-grid/Kika.jpg' }
+                    { name: 'Jubileu', age: '5 years', gender: 'Male', breed: 'European Shorthair', image: './assets/img/Cats-grid/Jubileu/Jubileu.jpg' },
+                    { name: 'Judy', age: '10 years', gender: 'Female', breed: 'European Shorthair', image: './assets/img/Cats-grid/Judy/Judy.jpg' },
+                    { name: 'Kika', age: '1 year', gender: 'Female', breed: 'Longhair', image: './assets/img/Cats-grid/Kika/Kika.jpg' }
                 ]
             ];
 
