--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <!-- Slide 1 -->
                         <div class="carousel-slide">
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Adolfina1.png" alt="Adolfina" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Adolfina/Adolfina.jpg" alt="Adolfina" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Adolfina</h3>
                                     <p>1 ano • Feminino • Europeu Comum</p>
@@ -133,7 +133,7 @@
                                 </div>
                             </div>
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Baunilha.png" alt="Baunilha" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Baunilha/Baunilha.jpg" alt="Baunilha" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Baunilha</h3>
                                     <p>2 anos • Masculino • Europeu Comum</p>
@@ -141,7 +141,7 @@
                                 </div>
                             </div>
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Brownie.png" alt="Brownie" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Brownie/Brownie3.jpg" alt="Brownie" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Brownie</h3>
                                     <p>2 anos • Masculino • Siamês</p>
@@ -152,7 +152,7 @@
                         <!-- Slide 2 -->
                         <div class="carousel-slide">
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Daisy.png" alt="Daisy" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Daisy/Daisy2.jpg" alt="Daisy" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Daisy</h3>
                                     <p>1 ano • Feminino • Pelo Longo</p>
@@ -160,7 +160,7 @@
                                 </div>
                             </div>
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Flash.jpg" alt="Flash" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Flash/Flash2.jpg" alt="Flash" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Flash</h3>
                                     <p>3 anos • Masculino • Pelo Longo</p>
@@ -168,7 +168,7 @@
                                 </div>
                             </div>
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Gaio.jpg" alt="Gaio" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Gaio/Gaio.jpg" alt="Gaio" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Gaio</h3>
                                     <p>2 anos • Masculino • Chartreux</p>
@@ -179,7 +179,7 @@
                         <!-- Slide 3 -->
                         <div class="carousel-slide">
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Gafanhoto.jpg" alt="Gafanhoto" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Gafanhoto/Gafanhoto.jpg" alt="Gafanhoto" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Gafanhoto</h3>
                                     <p>1 ano • Masculino • Europeu Comum</p>
@@ -187,7 +187,7 @@
                                 </div>
                             </div>
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Tequila Sunset.jpg" alt="Tequila Sunset" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Tequila/Tequila.jpg" alt="Tequila Sunset" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Tequila Sunset</h3>
                                     <p>10 anos • Feminino • Calico</p>
@@ -195,7 +195,7 @@
                                 </div>
                             </div>
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Isa.jpg" alt="Isa" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Isa/Isa.jpg" alt="Isa" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Isa</h3>
                                     <p>10 meses • Feminino • Europeu Comum</p>
@@ -206,7 +206,7 @@
                         <!-- Slide 4 -->
                         <div class="carousel-slide">
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Jubileu.jpg" alt="Jubileu" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Jubileu/Jubileu.jpg" alt="Jubileu" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Jubileu</h3>
                                     <p>5 anos • Masculino • Europeu Comum</p>
@@ -214,7 +214,7 @@
                                 </div>
                             </div>
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Judy.jpg" alt="Judy" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Judy/Judy.jpg" alt="Judy" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Judy</h3>
                                     <p>10 anos • Feminino • Europeu Comum</p>
@@ -222,7 +222,7 @@
                                 </div>
                             </div>
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Kika.jpg" alt="Kika" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Kika/Kika.jpg" alt="Kika" loading="lazy">
                                 <div class="cat-preview-info">
                                     <h3>Kika</h3>
                                     <p>1 ano • Feminino • Pelo Longo</p>
@@ -1037,27 +1037,27 @@
             var allCatCards = [
                 // Slide 1
                 [
-                    { name: 'Adolfina', age: '1 ano', gender: 'Feminino', breed: 'Europeu Comum', image: './assets/img/Cats-grid/Adolfina1.png' },
-                    { name: 'Baunilha', age: '2 anos', gender: 'Masculino', breed: 'Europeu Comum', image: './assets/img/Cats-grid/Baunilha.png' },
-                    { name: 'Brownie', age: '2 anos', gender: 'Masculino', breed: 'Siamês', image: './assets/img/Cats-grid/Brownie.png' }
+                    { name: 'Adolfina', age: '1 ano', gender: 'Feminino', breed: 'Europeu Comum', image: './assets/img/Cats-grid/Adolfina/Adolfina.jpg' },
+                    { name: 'Baunilha', age: '2 anos', gender: 'Masculino', breed: 'Europeu Comum', image: './assets/img/Cats-grid/Baunilha/Baunilha.jpg' },
+                    { name: 'Brownie', age: '2 anos', gender: 'Masculino', breed: 'Siamês', image: './assets/img/Cats-grid/Brownie/Brownie3.jpg' }
                 ],
                 // Slide 2
                 [
-                    { name: 'Daisy', age: '1 ano', gender: 'Feminino', breed: 'Pelo Longo', image: './assets/img/Cats-grid/Daisy.png' },
-                    { name: 'Flash', age: '3 anos', gender: 'Masculino', breed: 'Pelo Longo', image: './assets/img/Cats-grid/Flash.jpg' },
-                    { name: 'Gaio', age: '2 anos', gender: 'Masculino', breed: 'Chartreux', image: './assets/img/Cats-grid/Gaio.jpg' }
+                    { name: 'Daisy', age: '1 ano', gender: 'Feminino', breed: 'Pelo Longo', image: './assets/img/Cats-grid/Daisy/Daisy2.jpg' },
+                    { name: 'Flash', age: '3 anos', gender: 'Masculino', breed: 'Pelo Longo', image: './assets/img/Cats-grid/Flash/Flash2.jpg' },
+                    { name: 'Gaio', age: '2 anos', gender: 'Masculino', breed: 'Chartreux', image: './assets/img/Cats-grid/Gaio/Gaio.jpg' }
                 ],
                 // Slide 3
                 [
-                    { name: 'Gafanhoto', age: '1 ano', gender: 'Masculino', breed: 'Europeu Comum', image: './assets/img/Cats-grid/Gafanhoto.jpg' },
-                    { name: 'Tequila Sunset', age: '10 anos', gender: 'Feminino', breed: 'Calico', image: './assets/img/Cats-grid/Tequila Sunset.jpg' },
-                    { name: 'Isa', age: '10 meses', gender: 'Feminino', breed: 'Europeu Comum', image: './assets/img/Cats-grid/Isa.jpg' }
+                    { name: 'Gafanhoto', age: '1 ano', gender: 'Masculino', breed: 'Europeu Comum', image: './assets/img/Cats-grid/Gafanhoto/Gafanhoto.jpg' },
+                    { name: 'Tequila Sunset', age: '10 anos', gender: 'Feminino', breed: 'Calico', image: './assets/img/Cats-grid/Tequila/Tequila.jpg' },
+                    { name: 'Isa', age: '10 meses', gender: 'Feminino', breed: 'Europeu Comum', image: './assets/img/Cats-grid/Isa/Isa.jpg' }
                 ],
                 // Slide 4
                 [
-                    { name: 'Jubileu', age: '5 anos', gender: 'Masculino', breed: 'Europeu Comum', image: './assets/img/Cats-grid/Jubileu.jpg' },
-                    { name: 'Judy', age: '10 anos', gender: 'Feminino', breed: 'Europeu Comum', image: './assets/img/Cats-grid/Judy.jpg' },
-                    { name: 'Kika', age: '1 ano', gender: 'Feminino', breed: 'Pelo Longo', image: './assets/img/Cats-grid/Kika.jpg' }
+                    { name: 'Jubileu', age: '5 anos', gender: 'Masculino', breed: 'Europeu Comum', image: './assets/img/Cats-grid/Jubileu/Jubileu.jpg' },
+                    { name: 'Judy', age: '10 anos', gender: 'Feminino', breed: 'Europeu Comum', image: './assets/img/Cats-grid/Judy/Judy.jpg' },
+                    { name: 'Kika', age: '1 ano', gender: 'Feminino', breed: 'Pelo Longo', image: './assets/img/Cats-grid/Kika/Kika.jpg' }
                 ]
             ];
 
