--- a/EN-cats_grid.html
+++ b/EN-cats_grid.html
@@ -290,7 +290,7 @@
             <!-- Cat 3 - Bino -->
             <div class="cat-card" onclick="openModal('cat3')">
                 <div class="status-available">Available</div>
-                <img src="./assets/img/Cats-grid/Bino/Bino4.jpg" alt="Bino" class="cat-image">
+                <img src="./assets/img/Cats-grid/Bino/Bino1.jpg" alt="Bino" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Bino</div>
                     <div class="cat-details">
@@ -304,7 +304,7 @@
             <!-- Cat 4 - Boganga -->
             <div class="cat-card" onclick="openModal('cat4')">
                 <div class="status-available">Available</div>
-                <img src="./assets/img/Cats-grid/Boganga/Boganga.png" alt="Boganga" class="cat-image">
+                <img src="./assets/img/Cats-grid/Boganga/Boganga.jpg" alt="Boganga" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Boganga</div>
                     <div class="cat-details">
@@ -850,7 +850,7 @@
             <!-- Cat 43 - Amora -->
             <div class="cat-card" onclick="openModal('cat43')">
                 <div class="status-available">Available</div>
-                <img src="./assets/img/Cats-grid/Amora/Amora1.jpg" alt="Amora" class="cat-image">
+                <img src="./assets/img/Cats-grid/Amora/Amora.png" alt="Amora" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Amora</div>
                     <div class="cat-details">
@@ -878,7 +878,7 @@
             <!-- Cat 45 - Aquafit -->
             <div class="cat-card" onclick="openModal('cat45')">
                 <div class="status-available">Available</div>
-                <img src="./assets/img/Cats-grid/Aquafit/Aquafit.jpg" alt="Aquafit" class="cat-image">
+                <img src="./assets/img/Cats-grid/Aquafit/Aquafit.png" alt="Aquafit" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Aquafit</div>
                     <div class="cat-details">
@@ -1489,7 +1489,7 @@
                                         fill="currentColor" />
                                 </svg>
                             </a>
-                            <a href="https://linkedin.com/company/amigatosdamilkinha" target="_blank"
+                            <a href="https://www.linkedin.com/company/amigatos-da-milkinha/about/" target="_blank"
                                 aria-label="LinkedIn">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -1600,7 +1600,9 @@
                 description: 'He is Gafanhoto\'s best friend and Quininha\'s most annoying friend. Loves a good play session, but doesn\'t refuse cuddles and a good lap. He arrived at the shelter very stressed, but among his little friends he became one of the most friendly and gentle cats.',
                 images: [
                     './assets/img/Cats-grid/Baunilha/Baunilha.jpg',
-                    './assets/img/Cats-grid/Baunilha/Baunilha1.jpg'
+                    './assets/img/Cats-grid/Baunilha/Baunilha1.jpg',
+                    './assets/img/Cats-grid/Baunilha/Baunilha2.jpg',
+                    './assets/img/Cats-grid/Baunilha/Baunilha3.jpg'
                 ]
             },
             /* Cat 3 - Bino */
@@ -1617,9 +1619,11 @@
                 compatibleWithDogs: null,
                 description: 'This friendly young man always gives a little jump when we pet his head. He started as a very scared kitten, but over time he realized that there\'s nothing better than a good petting session (and good pâté).',
                 images: [
-                    './assets/img/Cats-grid/Bino/Bino4.jpg',
+                    './assets/img/Cats-grid/Bino/Bino1.jpg',
                     './assets/img/Cats-grid/Bino/Bino2.jpg',
-                    './assets/img/Cats-grid/Bino/Bino3.jpg'
+                    './assets/img/Cats-grid/Bino/Bino3.jpg',
+                    './assets/img/Cats-grid/Bino/Bino4.jpg',
+                    './assets/img/Cats-grid/Bino/Bino5.jpg'
                 ]
             },
             /* Cat 4 - Boganga */
@@ -1636,7 +1640,9 @@
                 compatibleWithDogs: null,
                 description: 'Still quite shy, but only with humans. She is very curious and loves to play with her sisters, with her little friends, and to annoy her mother. Daughter of Adolfina and sister of Mel and Isa.',
                 images: [
-                    './assets/img/Cats-grid/Boganga/Boganga.png'
+                    './assets/img/Cats-grid/Boganga/Boganga.jpg',
+                    './assets/img/Cats-grid/Boganga/Boganga1.jpg',
+                    './assets/img/Cats-grid/Boganga/Boganga2.jpg'
                 ]
             },
             /* Cat 5 - Boris */
@@ -1655,7 +1661,9 @@
                 images: [
                     './assets/img/Cats-grid/Boris/Boris1.jpg',
                     './assets/img/Cats-grid/Boris/Boris2.jpg',
-                    './assets/img/Cats-grid/Boris/Boris3.jpg'
+                    './assets/img/Cats-grid/Boris/Boris3.jpg',
+                    './assets/img/Cats-grid/Boris/Boris4.jpg',
+                    './assets/img/Cats-grid/Boris/Boris5.jpg'
                 ]
             },
             /* Cat 6 - Bowie */
@@ -1675,7 +1683,8 @@
                     './assets/img/Cats-grid/Bowie/Bowie.jpg',
                     './assets/img/Cats-grid/Bowie/Bowie1.jpg',
                     './assets/img/Cats-grid/Bowie/Bowie2.jpg',
-                    './assets/img/Cats-grid/Bowie/Bowie3.jpg'
+                    './assets/img/Cats-grid/Bowie/Bowie3.jpg',
+                    './assets/img/Cats-grid/Bowie/Bowie4.jpg'
                 ]
             },
             /* Cat 7 - Bragaparque */
@@ -1693,7 +1702,9 @@
                 description: 'He has beautiful green eyes, but he was so cute in this photo that we couldn\'t resist using it. Found near the place with the same name, this beautiful and friendly big cat lived on the streets for many years until his caregiver asked us for help to care for his coat. He loves good pâté and receiving cuddles.',
                 images: [
                     './assets/img/Cats-grid/Bragaparque/Bragaparque.jpg',
-                    './assets/img/Cats-grid/Bragaparque/Bragaparque1.jpg'
+                    './assets/img/Cats-grid/Bragaparque/Bragaparque1.jpg',
+                    './assets/img/Cats-grid/Bragaparque/Bragaparque2.jpg',
+                    './assets/img/Cats-grid/Bragaparque/Bragaparque3.jpg'
                 ]
             },
             /* Cat 8 - Branquinha */
@@ -1713,7 +1724,8 @@
                     './assets/img/Cats-grid/Branquinha/Branquinha1.jpg',
                     './assets/img/Cats-grid/Branquinha/Branquinha2.jpg',
                     './assets/img/Cats-grid/Branquinha/Branquinha3.jpg',
-                    './assets/img/Cats-grid/Branquinha/Branquinha4.jpeg'
+                    './assets/img/Cats-grid/Branquinha/Branquinha4.jpg',
+                    './assets/img/Cats-grid/Branquinha/Branquinha5.jpg'
                 ]
             },
             /* Cat 9 - Brownie */
@@ -1771,7 +1783,10 @@
                 description: 'This beauty has long and soft fur, very inviting for petting. Initially quite shy, Cléo has become a very affectionate and sweet kitten. She loves a good play session and pâté time.',
                 images: [
                     './assets/img/Cats-grid/Cléo/Cléo.jpg',
-                    './assets/img/Cats-grid/Cléo/Cléo1.jpg'
+                    './assets/img/Cats-grid/Cléo/Cléo1.jpg',
+                    './assets/img/Cats-grid/Cléo/Cléo2.jpg',
+                    './assets/img/Cats-grid/Cléo/Cléo3.jpg',
+                    './assets/img/Cats-grid/Cléo/Cléo4.jpg'
                 ]
             },
             /* Cat 12 - Daisy */
@@ -1884,7 +1899,8 @@
                 compatibleWithDogs: null,
                 description: 'Always very friendly and sociable from day one. He loves playing with friends, eating pâté and receiving cuddles. He always follows volunteers around, hopping from side to side looking for the next game. Baunilha\'s best friend.',
                 images: [
-                    './assets/img/Cats-grid/Gafanhoto/Gafanhoto.jpg'
+                    './assets/img/Cats-grid/Gafanhoto/Gafanhoto.jpg',
+                    './assets/img/Cats-grid/Gafanhoto/Gafanhoto1.jpg'
                 ]
             },
             /* Cat 18 - Gaio */
@@ -1922,7 +1938,10 @@
                 description: 'One of the shelter\'s most recent residents, this sweet but shy girl has very peculiar markings on her face, which reminded us of a harlequin. She still needs lots of love and affection to gain confidence with humans.',
                 images: [
                     './assets/img/Cats-grid/Tequila/Tequila.jpg',
-                    './assets/img/Cats-grid/Tequila/Tequila1.jpg'
+                    './assets/img/Cats-grid/Tequila/Tequila1.jpg',
+                    './assets/img/Cats-grid/Tequila/Tequila2.jpg',
+                    './assets/img/Cats-grid/Tequila/Tequila3.jpg',
+                    './assets/img/Cats-grid/Tequila/Tequila4.jpg'
                 ]
             },
             /* Cat 20 - Isa */
@@ -2033,7 +2052,10 @@
                 compatibleWithDogs: null,
                 description: 'Found on the highway, this big guy had dog bite marks on his little paws. Despite some fear of humans, he was very brave and let himself be treated until he recovered completely. Unfortunately he later contracted FIP and is currently undergoing treatment to recover.',
                 images: [
-                    './assets/img/Cats-grid/Link/Link.jpg'
+                    './assets/img/Cats-grid/Link/Link.jpg',
+                    './assets/img/Cats-grid/Link/Link1.jpg',
+                    './assets/img/Cats-grid/Link/Link2.jpg',
+                    './assets/img/Cats-grid/Link/Link3.jpg'
                 ]
             },
             /* Cat 26 - Maria Joaquina */
@@ -2051,7 +2073,10 @@
                 description: 'Very sweet and playful with everyone (but without much patience for Baunilha). When she was rescued she had been attacked by a dog and was seriously injured, but despite everything she never stopped being a sweetheart. She recovered completely and today is the shelter\'s big mama, as she loves taking care of the little ones (and the shelter moms are grateful!)',
                 images: [
                     './assets/img/Cats-grid/Maria Joaquina/Maria Joaquina.jpg',
-                    './assets/img/Cats-grid/Maria Joaquina/Maria Joaquina1.jpg'
+                    './assets/img/Cats-grid/Maria Joaquina/Maria Joaquina1.jpg',
+                    './assets/img/Cats-grid/Maria Joaquina/Maria Joaquina2.jpg',
+                    './assets/img/Cats-grid/Maria Joaquina/Maria Joaquina3.jpg',
+                    './assets/img/Cats-grid/Maria Joaquina/Maria Joaquina4.jpg'
                 ]
             },
             /* Cat 27 - Mariano */
@@ -2104,7 +2129,8 @@
                 images: [
                     './assets/img/Cats-grid/Mr. Blind/Mr. Blind.jpg',
                     './assets/img/Cats-grid/Mr. Blind/Mr. Blind1.jpg',
-                    './assets/img/Cats-grid/Mr. Blind/Mr. Blind2.jpg'
+                    './assets/img/Cats-grid/Mr. Blind/Mr. Blind2.jpg',
+                    './assets/img/Cats-grid/Mr. Blind/Mr. Blind3.jpg'
                 ]
             },
             /* Cat 30 - Olavo */
@@ -2140,7 +2166,8 @@
                 compatibleWithDogs: null,
                 description: 'Rescued at the same time as Bino, Picolé was not used to interacting with humans. This little one is still quite shy, but has been realizing that there\'s nothing better than a good cuddle. She loves pâté and taking naps with the little ones.',
                 images: [
-                    './assets/img/Cats-grid/Picolé/Picolé.jpg'
+                    './assets/img/Cats-grid/Picolé/Picolé.jpg',
+                    './assets/img/Cats-grid/Picolé/Picolé1.jpg'
                 ]
             },
             /* Cat 32 - Príncipe */
@@ -2174,7 +2201,8 @@
                 compatibleWithDogs: null,
                 description: 'This shy and friendly mom appeared in a colony in Gualtar. On the day she was rescued she ended up having her small litter of 4 kittens. Tired from the hard work of being a mother, she now spends her day napping by the window with Douradinho. Mother of Kima, Koda and Rodolfo.',
                 images: [
-                    './assets/img/Cats-grid/Salmiaki/Salmiaki.jpg'
+                    './assets/img/Cats-grid/Salmiaki/Salmiaki.jpg',
+                    './assets/img/Cats-grid/Salmiaki/Salmiaki1.jpg'
                 ]
             },
             /* Cat 34 - Speedy */
@@ -2268,7 +2296,9 @@
                 description: 'Named this way because she has a small imbalance that makes her head always tilted to the left side. Despite this, she runs and plays after the other kittens. Shy due to her condition, Tontinha is gradually letting us approach (especially if we have pâté).',
                 images: [
                     './assets/img/Cats-grid/Tontinha/Tontinha.jpg',
-                    './assets/img/Cats-grid/Tontinha/Tontinha1.jpg'
+                    './assets/img/Cats-grid/Tontinha/Tontinha1.jpg',
+                    './assets/img/Cats-grid/Tontinha/Tontinha2.jpg',
+                    './assets/img/Cats-grid/Tontinha/Tontinha3.jpg'
                 ]
             },
             /* Cat 39 - Vegeta */
@@ -2306,7 +2336,8 @@
                 description: 'Very calm and quiet, but a bit shy. She loves a good dose of petting. Rescued in Guimarães, this chubby girl was rescued with her kittens and kittens from other litters (since adopted). Mother of Bruxinha.',
                 images: [
                     './assets/img/Cats-grid/Vitória/Vitória.jpg',
-                    './assets/img/Cats-grid/Vitória/Vitória1.jpg'
+                    './assets/img/Cats-grid/Vitória/Vitória1.jpg',
+                    './assets/img/Cats-grid/Vitória/Vitória2.jpg'
                 ]
             },
             /* Cat 41 - Xerif */
@@ -2361,6 +2392,7 @@
                 compatibleWithDogs: null,
                 description: 'Initially captured for spaying and returning, this kitten ended up melting our hearts with her sweetness and friendliness. Unable to return her to the place where she was found, little Amora is now looking for a home where she can share her cuteness.',
                 images: [
+                    './assets/img/Cats-grid/Amora/Amora.png',
                     './assets/img/Cats-grid/Amora/Amora.jpg',
                     './assets/img/Cats-grid/Amora/Amora1.jpg',
                     './assets/img/Cats-grid/Amora/Amora2.jpeg',
@@ -2402,6 +2434,7 @@
                 compatibleWithDogs: null,
                 description: 'Born in June 2025 and found at the Aquafit gym, which is how he got his name. Since then, he has only charmed everyone who meets him! Aquafit is a super gentle, playful kitten full of energy. He loves cuddles (he even asks for them!) and is always ready to play. He is still a kitten, so he hasn\'t been neutered yet, but he is waiting for a family that will give him lots of love and affection.',
                 images: [
+                    './assets/img/Cats-grid/Aquafit/Aquafit.png',
                     './assets/img/Cats-grid/Aquafit/Aquafit.jpg',
                     './assets/img/Cats-grid/Aquafit/Aquafit1.jpg',
                     './assets/img/Cats-grid/Aquafit/Aquafit2.jpg',
@@ -2459,7 +2492,9 @@
                 description: 'This kitten full of personality doesn\'t like other kittens much, but loves human attention. We suspect she has hearing problems, as she doesn\'t always notice the presence of other cats (but always hears when we pick up a bowl to give her pâté)! Named Grace Kelly because she likes to meow a lot.',
                 images: [
                     './assets/img/Cats-grid/Grace Kelly/Grace Kelly.jpg',
-                    './assets/img/Cats-grid/Grace Kelly/Grace Kelly1.jpg'
+                    './assets/img/Cats-grid/Grace Kelly/Grace Kelly1.jpg',
+                    './assets/img/Cats-grid/Grace Kelly/Grace Kelly2.jpg',
+                    './assets/img/Cats-grid/Grace Kelly/Grace Kelly3.jpg'
                 ]
             },
             /* Cat 49 - Jerupiga */
@@ -2679,7 +2714,8 @@
                     './assets/img/Cats-grid/Pipa/Pipa.jpg',
                     './assets/img/Cats-grid/Pipa/Pipa1.jpg',
                     './assets/img/Cats-grid/Pipa/Pipa2.jpg',
-                    './assets/img/Cats-grid/Pipa/Pipa3.jpg'
+                    './assets/img/Cats-grid/Pipa/Pipa3.jpg',
+                    './assets/img/Cats-grid/Pipa/Pipa4.jpg'
                 ]
             },
             /* Cat 61 - Poncha */
@@ -2765,7 +2801,8 @@
                 compatibleWithDogs: null,
                 description: 'Detailed information about Rumo coming soon.',
                 images: [
-                    './assets/img/Cats-grid/Rumo/Rumo.jpg'
+                    './assets/img/Cats-grid/Rumo/Rumo.jpg',
+                    './assets/img/Cats-grid/Rumo/Rumo1.jpg'
                 ]
             },
             /* Cat 66 - Sol */
@@ -2783,7 +2820,11 @@
                 description: 'Detailed information about Sol coming soon.',
                 images: [
                     './assets/img/Cats-grid/Sol/Sol.jpg',
-                    './assets/img/Cats-grid/Sol/Sol1.jpg'
+                    './assets/img/Cats-grid/Sol/Sol1.jpg',
+                    './assets/img/Cats-grid/Sol/Sol2.jpg',
+                    './assets/img/Cats-grid/Sol/Sol3.jpg',
+                    './assets/img/Cats-grid/Sol/Sol4.jpg',
+                    './assets/img/Cats-grid/Sol/Sol5.jpg'
                 ]
             },
             /* Cat 67 - Tangerina */
@@ -2820,7 +2861,8 @@
                 compatibleWithDogs: null,
                 description: 'Detailed information about Tripé coming soon.',
                 images: [
-                    './assets/img/Cats-grid/Tripe/Tripe.jpg'
+                    './assets/img/Cats-grid/Tripe/Tripe.jpg',
+                    './assets/img/Cats-grid/Tripe/Tripe1.jpg'
                 ]
             },
             /* Cat 69 - Vagabundo */
@@ -2839,7 +2881,8 @@
                 images: [
                     './assets/img/Cats-grid/Vagabundo/Vagabundo.jpg',
                     './assets/img/Cats-grid/Vagabundo/Vagabundo1.jpg',
-                    './assets/img/Cats-grid/Vagabundo/Vagabundo2.jpg'
+                    './assets/img/Cats-grid/Vagabundo/Vagabundo2.jpg',
+                    './assets/img/Cats-grid/Vagabundo/Vagabundo3.jpg'
                 ]
             },
             /* Cat 70 - Van Damme */
@@ -2857,7 +2900,8 @@
                 description: 'Detailed information about Van Damme coming soon.',
                 images: [
                     './assets/img/Cats-grid/Van Damme/Van_Damme.jpg',
-                    './assets/img/Cats-grid/Van Damme/Van_Damme1.jpg'
+                    './assets/img/Cats-grid/Van Damme/Van_Damme1.jpg',
+                    './assets/img/Cats-grid/Van Damme/Van_Damme2.jpg'
                 ]
             },
             /* Cat 71 - Xico */
@@ -2874,7 +2918,8 @@
                 compatibleWithDogs: null,
                 description: 'Detailed information about Xico coming soon.',
                 images: [
-                    './assets/img/Cats-grid/Xico/Xico.jpg'
+                    './assets/img/Cats-grid/Xico/Xico.jpg',
+                    './assets/img/Cats-grid/Xico/Xico1.jpg'
                 ]
             },
             /* Cat 72 - Xiquinho */
