--- a/EN-index.html
+++ b/EN-index.html
@@ -787,7 +787,7 @@
                                         fill="currentColor" />
                                 </svg>
                             </a>
-                            <a href="https://linkedin.com/company/amigatosdamilkinha" target="_blank"
+                            <a href="https://www.linkedin.com/company/amigatos-da-milkinha/about/" target="_blank"
                                 aria-label="LinkedIn">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
